--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@angular/platform-browser-dynamic": "^7.2.14",
     "@angular/router": "^7.2.14",
     "bootstrap": "^4.3.1",
+    "bootstrap-select": "^1.13.10",
     "core-js": "^2.5.4",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
     "rellax": "^1.9.1",
     "rxjs": "~6.3.3",
-    "sweetalert2": "^8.8.7",
+    "sweetalert2": "^8.9.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
