--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@angular/platform-browser-dynamic": "^7.2.14",
     "@angular/router": "^7.2.14",
     "bootstrap": "^4.3.1",
-    "bootstrap-select": "^1.13.10",
     "core-js": "^2.5.4",
     "jquery": "^3.4.0",
     "popper.js": "^1.15.0",
@@ -38,6 +37,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "angular2-multiselect-dropdown": "^4.2.2",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
