--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^4.1.2",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "rellax": "^1.9.1",
     "rxjs": "~6.3.3",
